v0.6/guides/database/migrations.mdx
---
title: "Migrations"
description: "Version your database schema with Knex migrations managed through ace."
icon: "layer-group"
---

Migrations are version control for your database schema. Bejibun uses Knex.js
migrations, managed through the `ace` CLI. Each migration is a timestamped file
with an `up` and `down` function.

## Configuration

The database connection lives in `config/database.ts`. PostgreSQL is the default
client:

```ts config/database.ts
import type {Knex} from "knex";

const config: Knex.Config = {
    client: "pg",
    connection: {
        host: env("DB_HOST"),
        port: env("DB_PORT"),
        user: env("DB_USER"),
        password: env("DB_PASSWORD"),
        database: env("DB_DATABASE")
    },
    migrations: {
        extension: "ts",
        directory: "./database/migrations",
        schemaName: "public",
        tableName: "migrations"
    },
    pool: {
        min: 0,
        max: 10
    },
    seeds: {
        extension: "ts",
        directory: "./database/seeders"
    }
};

export default config;
```

<Note>
    The database layer is provided by `@bejibun/database`. Install it with
    `bun ace install @bejibun/database` if it isn't already present.
</Note>

## Creating a migration

```bash
bun ace make:migration create_users_table
```

This creates a timestamped file in `database/migrations/` with `up` and `down`
functions:

```ts database/migrations/20260101_000001_create_users_table.ts
import type {Knex} from "knex";
import UserModel from "@/app/models/UserModel";

export function up(knex: Knex): Knex.SchemaBuilder {
    return knex.schema.createTable(UserModel.tableName, (table: Knex.TableBuilder) => {
        table.bigIncrements("id");
        table.string("name");
        table.string("email").unique();
        table.timestamps(true, true);
        table.timestamp("deleted_at");
    });
}

export function down(knex: Knex): Knex.SchemaBuilder {
    return knex.schema.dropTable(UserModel.tableName);
}
```

## Commands

<CodeGroup>
    ```bash Apply pending migrations
    bun ace migrate:latest
    ```

    ```bash Rollback latest batch
    bun ace migrate:rollback
    ```

    ```bash Drop all + re-run
    bun ace migrate:fresh
    ```

    ```bash Show status
    bun ace migrate:status
    ```
</CodeGroup>

Example output:

```text
✔ Batch 1 finished
✔ 20260101_000001_create_users_table.ts
```

<Warning>
    `migrate:fresh` and `migrate:rollback` are destructive and prompt for
    confirmation (both accept a `--force` flag to bypass it). `migrate:fresh`
    drops **all** tables before re-running every migration -- never run it
    against production data.
</Warning>

## Column types

Add columns inside the `createTable` callback. The types below assume the
default `pg` client.

```ts
knex.schema.createTable("users", (table) => {
    table.increments("id");                 // auto-inc int PK (serial in pg)
    table.bigIncrements("id");              // auto-inc bigint PK (bigserial)
    table.integer("age");                   // int
    table.bigInteger("views");              // bigint (returned as string)
    table.string("name", 255);              // varchar(255), length optional
    table.text("bio");                      // text / clob
    table.boolean("is_active");             // boolean
    table.decimal("price", 8, 2);           // numeric(8,2)
    table.float("rating");                  // float
    table.date("born_on");                  // date
    table.dateTime("seen_at");              // datetime / timestamp
    table.timestamp("published_at");        // timestamp
    table.timestamps(true, true);           // created_at + updated_at (useTz, defaultNow)
    table.json("meta");                     // json
    table.jsonb("meta");                    // jsonb (pg)
    table.uuid("token");                    // uuid
    table.enu("status", ["draft", "live"]); // enum (aka table.enum)
});
```

## Column modifiers

Chain modifiers onto any column definition.

| Modifier            | Effect |
| ------------------- | ----------------------------- |
| `.notNullable()`    | `NOT NULL`                    |
| `.nullable()`       | allow null (default)          |
| `.defaultTo(value)` | Column default                |
| `.unique()`         | Unique constraint             |
| `.primary()`        | Mark as primary key           |
| `.unsigned()`       | Unsigned integer              |
| `.index()`          | Create an index on the column |
| `.comment("...")`   | Column comment                |

```ts
table.string("email").notNullable().unique();
table.integer("stock").unsigned().defaultTo(0);
table.string("slug").index().comment("URL slug");
```

## Foreign keys

Inline on the column, or as a standalone `table.foreign(...)`.

```ts
// inline
table.integer("user_id").unsigned()
    .references("id").inTable("users")
    .onDelete("CASCADE").onUpdate("CASCADE");

// standalone (also allows composite keys)
table.foreign("user_id").references("users.id").onDelete("SET NULL");
```

## Indexes and constraints

Composite or named constraints across one or more columns, plus their drop
counterparts (for use in `down`).

```ts
table.index(["last_name", "first_name"]);   // composite index
table.unique(["team_id", "slug"]);          // composite unique
table.primary(["a_id", "b_id"]);            // composite primary key

table.dropIndex(["last_name", "first_name"]);
table.dropUnique(["team_id", "slug"]);
```

## Altering tables

Use `alterTable` to add, change, rename, or drop columns. `.alter()` marks a
column for modification.

```ts
export function up(knex: Knex): Knex.SchemaBuilder {
    return knex.schema.alterTable("users", (table) => {
        table.string("phone");                              // add column
        table.string("name", 35).notNullable().alter();     // change type + nullability
        table.integer("age").alter({alterNullable: false}); // keep current nullability
        table.renameColumn("bio", "about");                 // rename
        table.dropColumn("legacy_flag");                    // drop column
        table.dropForeign("user_id");                       // drop FK
    });
}
```

## Schema helpers

Chain these on `knex.schema` in `up`/`down`. `hasTable`/`hasColumn` return a
boolean promise.

```ts
knex.schema.dropTable("users");
knex.schema.dropTableIfExists("users");         // safe in `down`
knex.schema.renameTable("users", "members");
await knex.schema.hasTable("users");            // -> boolean
await knex.schema.hasColumn("users", "email");
knex.schema.raw("CREATE EXTENSION IF NOT EXISTS \"uuid-ossp\"");
```

<CardGroup cols={2}>
    <Card title="Seeders" icon="seedling">
        Populate your database with default or sample data.
    </Card>
    <Card title="Models" icon="table">
        Define the models that map to your migrated tables.
    </Card>
</CardGroup>